--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,12 @@
 ---
-kxlops_timezone: America/Chicago
+kxlops_init_timezone: America/Chicago
+
+kxlops_init_aws_path: "{{ role_path }}/files/userdata.sh"
 
 kxlops_init_packages_to_remove: []
 kxlops_init_packages_to_install: []
 
-kxlops_yum_update_all: yes
+kxlops_init_yum_update_all: yes
 
 #remove not implemented yet
 kxlops_init_pip_to_remove: []
