--- a/tasks/config-hostname.yml
+++ b/tasks/config-hostname.yml
@@ -1,6 +1,6 @@
 ---
 - name: Copy and Execute hostname setup
-  script: '{{ base_path }}/roles/kxlops.init/files/userdata.sh'
+  script: "{{ kxlops_init_aws_path }}"
   register: myoutput
 
 - debug: msg='{{ myoutput }}'
